# telephone

./: .gitattributes  .gitignore  .travis.yml  AMBuildScript  PackageScript  README.md  crc32.cpp  upload.py  voice_packet.bt
client/: AMBuilder  emscripten.bat  emscripten.sh  main.cpp
decoders/: Makefile
decoders/celt/include/: config.h
decoders/libsamplerate/include/: config.h
decoders/libsamplerate/src/: src_sinc.c
decoders/silk/: LICENSE.txt
decoders/speex/include/: config.h
extension/: AMBuilder  extension.cpp  extension.h  smsdk_config.h  telephone.games.txt  telephone.ini
libwebsockets/: README.md
libwebsockets/include/: lws_config.h
libwebsockets/lib/: mbedcrypto.lib  mbedtls.lib  mbedx509.lib  websockets_static.lib
native-client/: AMBuilder  CppProperties.json  client.cpp
new-web-client/: data.txt  enums.txt  index.html
relay-server/: index.js  package.json
silk/: AMBuilder  crc32.cpp  emscripten-release.sh  emscripten.bat  emscripten.sh  test.js
test-client/: .gitignore  CMakeLists.txt  main.cpp
web-client/: decoders.js  index.html  silk.js  worker.js
